# pchex

./: .env.sample  .flake8  pyproject.toml
pchex/: config.py  deps.py  main.py
pchex/models/: compounds.py  enums.py
tests/: test_pchex.py
